--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
     gyverlibs/microDS3231@^2.7
     gyverlibs/GyverButton@^3.8
     gyverlibs/StringUtils@^1.3.7
+    gyverlibs/microDS18B20@^3.10
